ready for larger OSRM limit

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -146,7 +146,7 @@ body {
 <br>
 <form  style="text-align: center; top: 20px;" method="POST" action = "/">
   <div class = "form-group">
-  	<p class='form-text'>Postcode for place you're leaving</p>
+  	<p class='form-text'>Postcode for place you're leaving (please include the space in the middle)</p>
     <input type="text" name = "postcode_first" id='mids'>
     <p class='form-text'>Postcode for destination</p>
     <input type="text" name = "postcode_destination" id='mids'>
